Traduction du code en anglais